--- a/src/static/styles/neptune/partials/_markdown.scss
+++ b/src/static/styles/neptune/partials/_markdown.scss
@@ -25,6 +25,9 @@
     background-color: #1E2127;
   }
 
+  code {
+    font-family: $fira;
+  }
   // hr {
   //   background-color: $dark-grey;
   //   border: 0.3px solid;
