--- a/src/static/styles/neptune/partials/_variables.scss
+++ b/src/static/styles/neptune/partials/_variables.scss
@@ -1,6 +1,7 @@
 // Fonts
 $open: 'Open Sans', sans-serif;
 $lato: 'Lato', sans-serif;
+$fira: 'Fira Mono', Consolas, Menlo, Monaco, monospace, sans-serif;
 
 // Palette
 $primary: rgb(204, 235, 222);
